--- a/SocialNetwork/Base.lproj/Main.storyboard
+++ b/SocialNetwork/Base.lproj/Main.storyboard
@@ -1,24 +1,216 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Iniciar Sesion View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="IniciarSesionViewController" customModule="SocialNetwork" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Snapchat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KcB-xK-ESF">
+                                <rect key="frame" x="90" y="48" width="196" height="57.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="48"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Bh-wm-6ya">
+                                <rect key="frame" x="87.5" y="168" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="myP-X4-Hrk"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s66-TO-c6O">
+                                <rect key="frame" x="87.5" y="245.5" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="3gB-1T-wTM"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZS-LP-rEs">
+                                <rect key="frame" x="142" y="305.5" width="91" height="30"/>
+                                <state key="normal" title="Iniciar Sesión"/>
+                                <connections>
+                                    <action selector="iniciarSesionTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7w9-Pp-y8f"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.91223971416492855" blue="0.12024019879871573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="lZS-LP-rEs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2MB-Nj-q3I"/>
+                            <constraint firstItem="KcB-xK-ESF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8K5-cw-7M7"/>
+                            <constraint firstItem="lZS-LP-rEs" firstAttribute="top" secondItem="s66-TO-c6O" secondAttribute="bottom" constant="54.5" id="D5p-o7-sin"/>
+                            <constraint firstItem="s66-TO-c6O" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DW6-eG-zz7"/>
+                            <constraint firstItem="KcB-xK-ESF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="28" id="DYW-20-Bcw"/>
+                            <constraint firstItem="s66-TO-c6O" firstAttribute="top" secondItem="8Bh-wm-6ya" secondAttribute="bottom" constant="10" id="DpL-9u-Alk"/>
+                            <constraint firstItem="8Bh-wm-6ya" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="acQ-RI-5xp"/>
+                            <constraint firstItem="8Bh-wm-6ya" firstAttribute="top" secondItem="KcB-xK-ESF" secondAttribute="bottom" constant="25" id="alg-AS-ehN"/>
+                            <constraint firstItem="8Bh-wm-6ya" firstAttribute="top" secondItem="KcB-xK-ESF" secondAttribute="bottom" constant="62.5" id="bcV-oz-dv6"/>
+                            <constraint firstItem="lZS-LP-rEs" firstAttribute="top" secondItem="s66-TO-c6O" secondAttribute="bottom" constant="30" id="oDO-p9-qD5"/>
+                            <constraint firstItem="s66-TO-c6O" firstAttribute="top" secondItem="8Bh-wm-6ya" secondAttribute="bottom" constant="47.5" id="vmC-mN-uY6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="8Bh-wm-6ya" id="Ovm-JW-XGA"/>
+                        <outlet property="passwordTextField" destination="s66-TO-c6O" id="e5C-Zx-hFE"/>
+                        <segue destination="P3D-FO-Wd0" kind="presentation" identifier="iniciarsesionsegue" id="TkI-bK-xeP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="95" y="99"/>
+        </scene>
+        <!--Snaps View Controller-->
+        <scene sceneID="U5O-Vw-1mx">
+            <objects>
+                <viewController id="Bbf-Qd-flq" customClass="SnapsViewController" customModule="SocialNetwork" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="H59-QX-8ct">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Icf-CV-Hqs"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gVp-ek-xww">
+                        <barButtonItem key="leftBarButtonItem" title="Cerrar Sesión" id="eYF-Hi-cb6">
+                            <connections>
+                                <action selector="cerrarSesionTapped:" destination="Bbf-Qd-flq" id="1q7-WZ-d7h"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="5ez-Qp-fv8">
+                            <connections>
+                                <segue destination="gBZ-aM-eaD" kind="show" id="Hfm-xO-l1K"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NNa-pD-IJG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1679" y="99"/>
+        </scene>
+        <!--Snaps-->
+        <scene sceneID="JRd-hG-muQ">
+            <objects>
+                <viewController id="gBZ-aM-eaD" customClass="ImagenViewController" customModule="SocialNetwork" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eMg-cc-Tnx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="keP-7k-L8s">
+                                <rect key="frame" x="67" y="84" width="240" height="128"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="0NP-qs-S26"/>
+                                    <constraint firstAttribute="height" constant="128" id="4Fp-7I-vpM"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Descripción..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yhU-fJ-P6v">
+                                <rect key="frame" x="67.5" y="227" width="240" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kIh-RF-WPS">
+                                <rect key="frame" x="134.5" y="277" width="106" height="30"/>
+                                <state key="normal" title="Elegir Contacto"/>
+                                <connections>
+                                    <action selector="elegirContactoTapped:" destination="gBZ-aM-eaD" eventType="touchUpInside" id="QkJ-pN-ue3"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="keP-7k-L8s" firstAttribute="top" secondItem="eMg-cc-Tnx" secondAttribute="topMargin" constant="20" id="3F6-FJ-rKH"/>
+                            <constraint firstItem="yhU-fJ-P6v" firstAttribute="centerX" secondItem="eMg-cc-Tnx" secondAttribute="centerX" id="BfP-R8-o2C"/>
+                            <constraint firstItem="kIh-RF-WPS" firstAttribute="top" secondItem="yhU-fJ-P6v" secondAttribute="bottom" constant="20" id="D6U-wK-jEf"/>
+                            <constraint firstItem="yhU-fJ-P6v" firstAttribute="top" secondItem="keP-7k-L8s" secondAttribute="bottom" constant="15" id="HOd-8C-Cof"/>
+                            <constraint firstItem="yhU-fJ-P6v" firstAttribute="width" secondItem="keP-7k-L8s" secondAttribute="width" id="TmC-4A-XPN"/>
+                            <constraint firstItem="kIh-RF-WPS" firstAttribute="centerX" secondItem="eMg-cc-Tnx" secondAttribute="centerX" id="kk1-RO-yIl"/>
+                            <constraint firstItem="keP-7k-L8s" firstAttribute="centerX" secondItem="eMg-cc-Tnx" secondAttribute="centerX" id="xph-3M-quy"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2ql-rN-UiY"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Snaps" id="fLc-Rq-A7V">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="camera" id="kj7-nG-FZR">
+                            <connections>
+                                <action selector="camaraTapped:" destination="gBZ-aM-eaD" id="m3S-F6-1sv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="ImageView" destination="keP-7k-L8s" id="QqO-4Z-Rmn"/>
+                        <outlet property="descripcionTextField" destination="yhU-fJ-P6v" id="YwI-K5-R8c"/>
+                        <outlet property="elegirContactoButton" destination="kIh-RF-WPS" id="UtE-lK-dhr"/>
+                        <segue destination="Npv-Q0-Xbi" kind="show" identifier="seleccionarContactoSegue" id="dYI-vv-C6F"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d2E-I5-ddI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2408.8000000000002" y="98.50074962518741"/>
+        </scene>
+        <!--Elegir Usuario View Controller-->
+        <scene sceneID="GE1-fX-ZQQ">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Npv-Q0-Xbi" customClass="ElegirUsuarioViewController" customModule="SocialNetwork" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JmS-oN-Te5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Efy-n9-nd1">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6GN-jA-0gt" firstAttribute="bottom" secondItem="Efy-n9-nd1" secondAttribute="bottom" id="D1w-V0-euU"/>
+                            <constraint firstItem="Efy-n9-nd1" firstAttribute="leading" secondItem="6GN-jA-0gt" secondAttribute="leading" id="XgA-fA-qK9"/>
+                            <constraint firstItem="6GN-jA-0gt" firstAttribute="trailing" secondItem="Efy-n9-nd1" secondAttribute="trailing" id="bY2-fd-K0S"/>
+                            <constraint firstItem="Efy-n9-nd1" firstAttribute="top" secondItem="6GN-jA-0gt" secondAttribute="top" id="oaU-2a-aC0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6GN-jA-0gt"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Efy-n9-nd1" id="3ZL-5K-n66"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IHA-x0-aPM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3151" y="99"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Z9Y-mb-Mwr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="P3D-FO-Wd0" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EUs-Gx-6OS">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Bbf-Qd-flq" kind="relationship" relationship="rootViewController" id="FlV-iQ-W9R"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y6E-Wp-4as" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="904" y="98.950524737631198"/>
         </scene>
     </scenes>
 </document>
