--- a/SocialNetwork/Base.lproj/Main.storyboard
+++ b/SocialNetwork/Base.lproj/Main.storyboard
@@ -80,11 +80,23 @@
         <!--Snaps View Controller-->
         <scene sceneID="U5O-Vw-1mx">
             <objects>
-                <viewController id="Bbf-Qd-flq" customClass="SnapsViewController" customModule="SocialNetwork" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="Bbf-Qd-flq" customClass="SnapsViewController" customModule="SocialNetwork" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H59-QX-8ct">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zkt-D5-uMc">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="zkt-D5-uMc" firstAttribute="top" secondItem="Icf-CV-Hqs" secondAttribute="top" id="9eW-Wg-mTB"/>
+                            <constraint firstItem="zkt-D5-uMc" firstAttribute="leading" secondItem="Icf-CV-Hqs" secondAttribute="leading" id="IVQ-5W-RpW"/>
+                            <constraint firstItem="Icf-CV-Hqs" firstAttribute="bottom" secondItem="zkt-D5-uMc" secondAttribute="bottom" id="Lyx-Fh-neA"/>
+                            <constraint firstItem="Icf-CV-Hqs" firstAttribute="trailing" secondItem="zkt-D5-uMc" secondAttribute="trailing" id="NS6-Xv-YRp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Icf-CV-Hqs"/>
                     </view>
                     <navigationItem key="navigationItem" id="gVp-ek-xww">
@@ -99,10 +111,54 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="zkt-D5-uMc" id="raN-E2-wVB"/>
+                        <segue destination="s3g-EY-vRf" kind="show" identifier="versnapsegue" id="Cxe-x6-cID"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NNa-pD-IJG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1679" y="99"/>
+        </scene>
+        <!--Ver Snap View Controller-->
+        <scene sceneID="bpi-eA-zHk">
+            <objects>
+                <viewController id="s3g-EY-vRf" customClass="VerSnapViewController" customModule="SocialNetwork" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RIg-SI-rTD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZnP-x0-Ebp">
+                                <rect key="frame" x="21" y="636" width="349" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R4x-1a-1Qw">
+                                <rect key="frame" x="10" y="74" width="355" height="552"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="AnK-Ex-Tqt" firstAttribute="trailing" secondItem="R4x-1a-1Qw" secondAttribute="trailing" constant="10" id="12m-Is-6RQ"/>
+                            <constraint firstItem="AnK-Ex-Tqt" firstAttribute="bottom" secondItem="ZnP-x0-Ebp" secondAttribute="bottom" constant="10" id="5NB-Gd-gya"/>
+                            <constraint firstItem="R4x-1a-1Qw" firstAttribute="top" secondItem="AnK-Ex-Tqt" secondAttribute="top" constant="10" id="Buq-T2-1HF"/>
+                            <constraint firstItem="AnK-Ex-Tqt" firstAttribute="trailing" secondItem="ZnP-x0-Ebp" secondAttribute="trailing" constant="5" id="M7v-l5-QHe"/>
+                            <constraint firstItem="ZnP-x0-Ebp" firstAttribute="centerX" secondItem="RIg-SI-rTD" secondAttribute="centerX" id="Owu-9g-fC8"/>
+                            <constraint firstItem="R4x-1a-1Qw" firstAttribute="leading" secondItem="AnK-Ex-Tqt" secondAttribute="leading" constant="10" id="XQ3-Q6-ZEc"/>
+                            <constraint firstItem="ZnP-x0-Ebp" firstAttribute="leading" secondItem="RIg-SI-rTD" secondAttribute="leadingMargin" constant="5" id="Y87-Nk-sFg"/>
+                            <constraint firstItem="ZnP-x0-Ebp" firstAttribute="top" secondItem="R4x-1a-1Qw" secondAttribute="bottom" constant="10" id="c21-aS-rDA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="AnK-Ex-Tqt"/>
+                    </view>
+                    <connections>
+                        <outlet property="Label" destination="ZnP-x0-Ebp" id="AyR-6p-I7I"/>
+                        <outlet property="imageView" destination="R4x-1a-1Qw" id="5l8-fu-DEe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pTl-zf-El0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1678" y="877"/>
         </scene>
         <!--Snaps-->
         <scene sceneID="JRd-hG-muQ">
